# gn_build_system

./: .cproject  .project  BUILD.gn  README.md  build.ninja  build.ninja.d  build.py  toolchain.ninja
src/: hello.cc  hello_shared.cc  hello_static.cc
